--- a/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
@@ -15,7 +15,7 @@
 <link href="@Url.Content("~/Content/Dialog/dialogstyle.css")" rel="stylesheet" type="text/css" />
 <link href="@Url.Content("~/Content/Tab/easy-responsive-tabs.css")" rel="stylesheet" type="text/css" />
 <script src="@Url.Content("~/Scripts/Tab/easyResponsiveTabs.js")" type="text/javascript"></script>
-<link href="@Url.Content("~/Content/Style2.css")" rel="stylesheet" type="text/css" />
+@*<link href="@Url.Content("~/Content/Style2.css")" rel="stylesheet" type="text/css" />*@
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 <div id="dialog" title="Quotation" class="dialogstyle">
@@ -68,30 +68,35 @@
     @using (Html.BeginForm())
     {
         <form>
-            <ul class="form-style-2">
-                <li>
-                    <img src="@Url.Content("~/images/btnNewVersion.jpg")" alt="IMAGES" class="btnimage-3" />
-                </li>
-                <li>
-                    @Html.LabelFor(a => a.Docver, new { @class = "label-7" })&nbsp;@Html.LabelFor(a => a.Price, new { @class = "label-4" })&nbsp;@Html.LabelFor(a => a.Cost, new { @class = "label-3" })
-                    @Html.TextBoxFor(a => a.Docver, new { id = "Docver", @class = "field-divided-3", placeholder = "1", disabled = "disabled" })&nbsp;@Html.TextBoxFor(a => a.Price, new { id = "Price", @class = "field-divided-4", placeholder = "ราคาขาย" })&nbsp;@Html.TextBoxFor(a => a.Cost, new { id = "Cost", @class = "field-divided-5", placeholder = "ราคาทุน" })
-                    @Html.ValidationMessageFor(a => a.Docver)&nbsp;@Html.ValidationMessageFor(a => a.Price)&nbsp;@Html.ValidationMessageFor(a => a.Cost)
-                </li>
-                <li>
-                    @Html.LabelFor(a => a.QuotationNo, new { @class = "label-11" })&nbsp;@Html.LabelFor(a => a.Profit, new { @class = "label-12" })
-                    @Html.TextBoxFor(a => a.QuotationNo, new { id = "QuotationNo", @class = "field-divided", placeholder = "ใบเสนอราคา", disabled = "disabled" })
-                    @Html.ValidationMessageFor(a => a.QuotationNo)
-                    &nbsp;<a href="#" id="opener"><img src="@Url.Content("~/Images/search-engine.png")" class="btnimage" /></a>&nbsp;@Html.TextBoxFor(a => a.Profit, new { id = "Profit", @class = "field-divided-5", placeholder = "กำไร" })&nbsp;@Html.ValidationMessageFor(a => a.Profit)
-                </li>
-            </ul>
-            <ul class="form-style-2">
-                <li>
-                    @Html.LabelFor(a => a.Remark, new { @class = "label-13" })
-                    @Html.TextAreaFor(a => a.Remark, new { id = "Remark", @class = "field-long field-textarea", placeholder = "หมายเหตุ" })&nbsp;<input type="submit" value="Save" id="Create" />
-                    @Html.ValidationMessageFor(a => a.Remark)
-                </li>
-                <br />
-            </ul>
+                <ul class="form-style-1">
+                    <li>
+                        <label class="btnnew">Doc Version</label>&nbsp;<img src="@Url.Content("~/images/btnNewVersion.jpg")" alt="IMAGES" class="btnimage-3" />
+                    </li>
+                    <li>
+                        <input type="text" id = "Docver"  name="field1" class="field-select-small-2" placeholder="V1" disabled />
+                    </li>
+                    <li>
+                        <label>ใบเสนอราคา<span class="required">*</span></label>
+                        <input type="text" id = "QuotationNo" name="field1" class="field-select-big" placeholder="ใบเสนอราคา" disabled />&nbsp;<img src="@Url.Content("~/Images/search-engine.png")" alt="IMAGES" class="btnimage" />
+                    </li>
+                </ul>
+                <ul class="form-style-1">
+                    <li>
+                        <label class="label-big">ราคาขาย<span class="required">*</span></label>&nbsp;<label class="label-small">ราคาทุน<span class="required">*</span></label>
+                        <input type="text" id = "Price" name="field1" class="field-divided" placeholder="ราคาขาย" />&nbsp;<input type="text" id = "Cost" name="field2" class="field-divided" placeholder="ราคาทุน" />
+                    </li>
+                    <li>
+                        <label>กำไร<span class="required">*</span></label>
+                        <input type="text" id = "Profit" name="field1" class="field-divided" placeholder="กำไร" />
+                    </li>
+                </ul>
+                <ul class="form-style-1">
+                    <li>
+                        <label>หมายเหตุ<span class="required">*</span></label>
+                        <textarea name="field5" id = "Remark" class="field-long field-textarea"></textarea>
+                    </li>
+                    <br />
+                </ul>
 
             <table class="tabbar">
                 <tr>
