--- a/Alpha/AlphaMvc/Views/IncomeMaster/CreateIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/CreateIncomeMaster.cshtml
@@ -11,9 +11,8 @@
         <form>
             <ul class="form-style">
                 <li>
-                    @Html.LabelFor(a => a.Detail)
-                    @Html.TextBoxFor(a => a.Detail, new { id = "Detail" })
-                    @Html.ValidationMessageFor(a => a.Detail)
+                    <label>Detail<span class="required">*</span></label>
+                    <input type="text" id = "Detail" class="field-divided" placeholder="Detail" />
                 </li>              
             </ul>
             <br />
