--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -19,8 +19,11 @@
 <link href="@Url.Content("~/Content/timepicker/wickedpicker.css")" rel="stylesheet" type="text/css" />
 <script src="@Url.Content("~/Scripts/timepicker/wickedpicker.js")" type="text/javascript"></script>
 
+<link href="@Url.Content("~/Content/editable/popupgrid.css")" rel="stylesheet" type="text/css" />
+<link href="@Url.Content("~/Content/bootstrap.css")" rel="stylesheet" type="text/css" />
+
 <div id="customerDialog" title="ลูกค้า" class="dialogstyle">
-    <table id="tblCustomer">
+    <table id="tblCustomer" class="table table-striped">
         <thead>
             <tr>
                 <th>No.</th>
@@ -886,7 +889,7 @@
             width: 550,
             paging: true,
             modal: true,
-            autoOpen: false,
+            autoOpen: false,         
             show: {
                 effect: "blind",
                 duration: 1000
